@@ -2,7 +2,7 @@
 apiVersion=0.7.7.1
 name=Mediaplayer
 author=Christian Knobloch & Dominik Haselmeier
-version=1.7.0.7
+version=1.8.0.1
 uid=de.der-knob.sally.app.mediaplayer
 
 [dll]
