@@ -127,11 +127,17 @@
 #define GUI_NUMBER_SELECTOR_CHANGED						1019
 
 #define GUI_LISTVIEW_ITEM_DOUBLECLICKED					1020
+#define GUI_LISTVIEW_ITEM_START_DRAGGING				1021
 
-#define GUI_SCROLLBAR_CLICKED							1021
-#define GUI_SCROLLBAR_MOVED								1022
+#define GUI_SCROLLBAR_CLICKED							1023
+#define GUI_SCROLLBAR_MOVED								1024
 
 #define GUI_BREADCRUMB_START_CLICKED					1025
+
+#define GUI_LABEL_HOLDCLICKED							1027
+#define GUI_BUTTON_HOLDCLICKED							1028
+#define GUI_IMAGEBOX_HOLDCLICKED						1029
+#define GUI_LISTVIEW_ITEM_HOLDCLICKED					1030
 
 #define GUI_MOUSEMOVE_RIGHT								1030
 #define GUI_MOUSEMOVE_LEFT								1031
